--- a/composer.json
+++ b/composer.json
@@ -31,8 +31,7 @@
         "jitesoft/exceptions": "2.2.*",
         "jitesoft/container": "4.0.*",
         "zendframework/zend-diactoros": "1.7.*",
-        "nikic/fast-route": "1.3.*",
-        "jitesoft/loggers": "^1.1"
+        "nikic/fast-route": "1.3.*"
     },
     "require-dev": {
         "phpunit/phpunit": "7.0.*",
