--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "jitesoft/exceptions": "2.2.*",
         "jitesoft/container": "4.0.*",
         "zendframework/zend-diactoros": "1.7.*",
-        "nikic/fast-route": "1.3.*"
+        "nikic/fast-route": "1.3.*",
+        "jitesoft/datastructures": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "7.0.*",
